fixed an issue with the header z-index.

--- a/app/assets/stylesheets/protoadmin/layout/_header.scss
+++ b/app/assets/stylesheets/protoadmin/layout/_header.scss
@@ -1,5 +1,4 @@
 #header {
-  position: relative;
   z-index: 1;
   overflow: hidden;
   h1 {
